# tele-bot-outcome

./: README.md
.github/workflows/: deploy.yml
backend/: package.json  wrangler.jsonc
backend/src/: index.ts
backend/src/middleware/: auth.ts  csp.ts
backend/src/utils/: verifyTelegram.ts
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  routeTree.gen.ts  types.ts
frontend/src/components/: BottomNav.tsx  Chart.tsx  CustomChartTooltip.tsx  Dashboard.tsx  Navbar.tsx  Receipt.tsx  Search.tsx
frontend/src/components/receipts/: ActionRequiredPage.tsx  ActionRequiredSection.tsx  ReceiptEditModal.tsx  ReceiptEmptyState.tsx  ReceiptFilterChips.tsx  ReceiptHeader.tsx  ReceiptSearchBar.tsx  ReceiptsPage.tsx  ReceiptsSkeleton.tsx  RecentActivityList.tsx
frontend/src/hooks/: usePullToRefresh.ts
frontend/src/lib/: auth.ts  crypto.ts
frontend/src/routes/: __root.tsx  index.tsx  receipt.tsx
frontend/src/routes/receipts/: action-required.tsx  index.tsx
frontend/src/utils/: calculateDicountVoucher.tsx  categoryHelpers.ts  currency.ts
ml-service/: .dockerignore  .gitignore  Dockerfile  README.md  default_rapidocr.yaml  pyproject.toml
ml-service/.github/workflows/: deploy.yml
ml-service/app/: main.py
ml-service/app/services/: ai_services.py  ocr_services.py  validation.py
