[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "ollama>=0.6.1",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "python-telegram-bot>=22.6",
    "supabase>=2.27.3",
    "uvicorn[standard]>=0.40.0",
]
