[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "ollama>=0.6.1",
    "onnxruntime>=1.24.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "python-telegram-bot>=22.6",
    "rapidocr>=3.6.0",
    "httpx>=0.28.0",
    "supabase>=2.27.3",
    "uvicorn[standard]>=0.40.0",
]
